--- a/pattern.css
+++ b/pattern.css
@@ -4,46 +4,46 @@
   --gs:0;
   --hr:0deg;
 
-  --p-school:url("patterns/school.svg");
-  --p-service:url("patterns/service.svg");
-  --p-social-media:url("patterns/social-media.svg");
-  --p-festive:url("patterns/festive.svg");
-  --p-bathroom:url("patterns/bathroom.svg");
-  --p-food:url("patterns/food.svg");
-  --p-space:url("patterns/space.svg");
-  --p-flower:url("patterns/flower.svg");
-  --p-sea:url("patterns/sea.svg");
-  --p-animal:url("patterns/animal.svg");
-  --p-money:url("patterns/money.svg");
-  --p-map:url("patterns/map.svg");
-  --p-city:url("patterns/city.svg");
-  --p-night:url("patterns/night.svg");
-  --p-weather:url("patterns/weather.svg");
-  --p-date:url("patterns/date.svg");
-  --p-halloween:url("patterns/halloween.svg");
-  --p-party:url("patterns/party.svg");
-  --p-music:url("patterns/music.svg");
-  --p-science:url("patterns/science.svg");
-  --p-video-games:url("patterns/video-games.svg");
-  --p-fitness:url("patterns/fitness.svg");
-  --p-sports:url("patterns/sports.svg");
-  --p-people:url("patterns/people.svg");
-  --p-books:url("patterns/books.svg");
-  --p-pc:url("patterns/pc.svg");
-  --p-web:url("patterns/web.svg");
-  --p-warning:url("patterns/warning.svg");
-  --p-security:url("patterns/security.svg");
-  --p-health:url("patterns/health.svg");
-  --p-success:url("patterns/success.svg");
-  --p-shopping:url("patterns/shopping.svg");
-  --p-office:url("patterns/office.svg");
-  --p-cloths:url("patterns/cloths.svg");
-  --p-cars:url("patterns/cars.svg");
-  --p-files:url("patterns/files.svg");
-  --p-phones:url("patterns/phones.svg");
-  --p-weapons:url("patterns/weapons.svg");
-  --p-bugs:url("patterns/bugs.svg");
-  --p-support:url("patterns/support.svg");
+  --p-school:url("https://piethoncoder.github.io/pattern.css/patterns/school.svg");
+  --p-service:url("https://piethoncoder.github.io/pattern.css/patterns/service.svg");
+  --p-social-media:url("https://piethoncoder.github.io/pattern.css/patterns/social-media.svg");
+  --p-festive:url("https://piethoncoder.github.io/pattern.css/patterns/festive.svg");
+  --p-bathroom:url("https://piethoncoder.github.io/pattern.css/patterns/bathroom.svg");
+  --p-food:url("https://piethoncoder.github.io/pattern.css/patterns/food.svg");
+  --p-space:url("https://piethoncoder.github.io/pattern.css/patterns/space.svg");
+  --p-flower:url("https://piethoncoder.github.io/pattern.css/patterns/flower.svg");
+  --p-sea:url("https://piethoncoder.github.io/pattern.css/patterns/sea.svg");
+  --p-animal:url("https://piethoncoder.github.io/pattern.css/patterns/animal.svg");
+  --p-money:url("https://piethoncoder.github.io/pattern.css/patterns/money.svg");
+  --p-map:url("https://piethoncoder.github.io/pattern.css/patterns/map.svg");
+  --p-city:url("https://piethoncoder.github.io/pattern.css/patterns/city.svg");
+  --p-night:url("https://piethoncoder.github.io/pattern.css/patterns/night.svg");
+  --p-weather:url("https://piethoncoder.github.io/pattern.css/patterns/weather.svg");
+  --p-date:url("https://piethoncoder.github.io/pattern.css/patterns/date.svg");
+  --p-halloween:url("https://piethoncoder.github.io/pattern.css/patterns/halloween.svg");
+  --p-party:url("https://piethoncoder.github.io/pattern.css/patterns/party.svg");
+  --p-music:url("https://piethoncoder.github.io/pattern.css/patterns/music.svg");
+  --p-science:url("https://piethoncoder.github.io/pattern.css/patterns/science.svg");
+  --p-video-games:url("https://piethoncoder.github.io/pattern.css/patterns/video-games.svg");
+  --p-fitness:url("https://piethoncoder.github.io/pattern.css/patterns/fitness.svg");
+  --p-sports:url("https://piethoncoder.github.io/pattern.css/patterns/sports.svg");
+  --p-people:url("https://piethoncoder.github.io/pattern.css/patterns/people.svg");
+  --p-books:url("https://piethoncoder.github.io/pattern.css/patterns/books.svg");
+  --p-pc:url("https://piethoncoder.github.io/pattern.css/patterns/pc.svg");
+  --p-web:url("https://piethoncoder.github.io/pattern.css/patterns/web.svg");
+  --p-warning:url("https://piethoncoder.github.io/pattern.css/patterns/warning.svg");
+  --p-security:url("https://piethoncoder.github.io/pattern.css/patterns/security.svg");
+  --p-health:url("https://piethoncoder.github.io/pattern.css/patterns/health.svg");
+  --p-success:url("https://piethoncoder.github.io/pattern.css/patterns/success.svg");
+  --p-shopping:url("https://piethoncoder.github.io/pattern.css/patterns/shopping.svg");
+  --p-office:url("https://piethoncoder.github.io/pattern.css/patterns/office.svg");
+  --p-cloths:url("https://piethoncoder.github.io/pattern.css/patterns/cloths.svg");
+  --p-cars:url("https://piethoncoder.github.io/pattern.css/patterns/cars.svg");
+  --p-files:url("https://piethoncoder.github.io/pattern.css/patterns/files.svg");
+  --p-phones:url("https://piethoncoder.github.io/pattern.css/patterns/phones.svg");
+  --p-weapons:url("https://piethoncoder.github.io/pattern.css/patterns/weapons.svg");
+  --p-bugs:url("https://piethoncoder.github.io/pattern.css/patterns/bugs.svg");
+  --p-support:url("https://piethoncoder.github.io/pattern.css/patterns/support.svg");
 }
 
 *[class*="p-"][p-size="xxxs"] {--s: 101px}
