--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -1,24 +1,28 @@
 @import url('https://fonts.googleapis.com/css?family=Vollkorn&display=swap');
+
 :root {
   --color1: rgb(33, 190, 221);
   --color2: rgb(75, 209, 144);
   --color3: rgb(186, 52, 105);
   --color4: rgb(229, 158, 25);
-  --font:font-family: 'Vollkorn', serif;
+  --font: font-family: 'Vollkorn', serif;
 }
 
-header::before{
+header::before {
   background-attachment: fixed;
 }
 
-#pattern-list{
-   box-shadow: 3px 5px 7px 2px #bbb;
+#pattern-list {
+  box-sizing: border-box;
+  list-style-type: circle;
+  box-shadow: 3px 5px 7px 2px #bbb;
 }
 
-.pattern-block{
-  height:30%;
-  width:10%;
-  float:left;
-  border:6px solid black;
+.pattern-block {
+  overflow: hidden;
+  height: 30%;
+  width: 13.5%;
+  float: left;
+  border: 2px solid black;
   border-radius: 22px;
 }
